--- a/k8s/templates/base/clusterip-service.yaml
+++ b/k8s/templates/base/clusterip-service.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
-    app: demo-rest-service
-  name: demo-rest-service
+    app: {{ .Values.appName }}
+  name: {{ .Values.appName }}
 spec:
   ports:
   - name: 8080-8080
@@ -12,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: demo-rest-service
+    app: {{ .Values.appName }}
   type: ClusterIP
 status:
   loadBalancer: {}
