--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,10 +9,13 @@ build:
     jib:
       project: com.axamit.springboot:demo-rest-service
 deploy:
-  kubectl:
-    manifests:
-    - k8s/deployment.yaml
-    - k8s/services/clusterip-service.yaml
+  kustomize:
+    paths: ["k8s/kustomize/templates/base"]
+profiles:
+  - name: test
+    deploy:
+      kustomize:
+        paths: [ "k8s/kustomize/templates/overlays/test" ]
 # Port forwarding section is optional
 portForward:
   - resourceType: service
