--- a/helm/templates/base/deployment.yaml
+++ b/helm/templates/base/deployment.yaml
@@ -35,7 +35,7 @@ spec:
           timeoutSeconds: 3
           periodSeconds: 5
           failureThreshold: 3
-        # If HTTP GET request to liveness doesn’t receive UP status in the timing conditions above,
+        # If HTTP GET request to liveness doesn't receive UP status in the timing conditions above,
         # the pod will restart.
         livenessProbe:
           httpGet:
