--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.lifecycle.timeout-per-shutdown-phase=20s
 # Force enable health probes. Would be enabled on kubernetes platform by default
 
 # management.server.port: 9001
+
+postgresql.secrets.path=/etc/secret-volume
+
+spring.datasource.url=jdbc:postgresql://demo-postgres-postgresql:5432/demo_rest_service_db
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+logging.level.org.springframework.data=INFO
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
