Commenting out maven container run

--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -24,6 +24,6 @@ spec:
       tty: true
       env:
         - name: CONTAINER_ENV_VAR
-          value: maven
+          value: build-container
   imagePullSecrets:
     - name: regcred
