--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -9,13 +9,11 @@ spec:
       env:
         - name: CONTAINER_ENV_VAR
           value: jnlp
-    - name: build-container
-      image: docker.io/peteby/build-container
+    - name: maven
+      image: maven:3.3.9-jdk-8-alpine
       command:
-        - ls
+        - cat
       tty: true
       env:
         - name: CONTAINER_ENV_VAR
-          value: build-container
-  imagePullSecrets:
-    - name: regcred
+          value: maven
