--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -11,6 +11,9 @@ spec:
     - name: build-container
       image: docker.io/peteby/build-container
       tty: true
+      terminationMessagePolicy: FallbackToLogsOnError
+      command: ["/bin/sh"]
+      args: ["-c", "sleep infinity"]
       env:
         - name: CONTAINER_ENV_VAR
           value: build-container
