--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -11,6 +11,7 @@ spec:
     - name: build-container
       image: docker.io/peteby/build-container
       terminationMessagePolicy: FallbackToLogsOnError
+      tty: true
       command: ["cat"]
       env:
         - name: CONTAINER_ENV_VAR
