--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -9,7 +9,7 @@ spec:
         - name: CONTAINER_ENV_VAR
           value: jnlp
     - name: build-container
-      image: docker.io/peteby/build-container
+      image: docker.io/peteby/build-container:1.0.0
       terminationMessagePolicy: FallbackToLogsOnError
       tty: true
       command: ["cat"]
