--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -3,10 +3,10 @@ metadata:
   labels:
     app: rest-demo-service
 spec:
-  volumes:
-    - name: maven-repo-pv
-      persistentVolumeClaim:
-        claimName: maven-repo-pvc
+#  volumes:
+#    - name: maven-repo-pv
+#      persistentVolumeClaim:
+#        claimName: maven-repo-pvc
   containers:
     - name: jnlp
       env:
@@ -22,8 +22,8 @@ spec:
       env:
         - name: CONTAINER_ENV_VAR
           value: build-container
-      volumeMounts:
-        - mountPath: "/home/jenkins/.m2"
-          name: maven-repo-pv
+#      volumeMounts:
+#        - mountPath: "/home/jenkins/.m2"
+#          name: maven-repo-pv
   imagePullSecrets:
     - name: regcred
