restored volume declarations

--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -17,6 +17,7 @@ spec:
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
+        fsGroup: 1000
       tty: true
       command: ["cat"]
       env:
