--- a/helm/pom.xml
+++ b/helm/pom.xml
@@ -59,14 +59,17 @@
 						<groupId>com.kiwigrid</groupId>
 						<artifactId>helm-maven-plugin</artifactId>
 						<version>5.6</version>
+                        <extensions>true</extensions>
 						<configuration>
 							<chartDirectory>${project.basedir}/${chart.name}</chartDirectory>
 							<chartVersion>${project.version}</chartVersion>
 							<appVersion>${project.version}</appVersion>
                             <outputDirectory>${outputDirectory}</outputDirectory>
 							<useLocalHelmBinary>true</useLocalHelmBinary>
-							<skipInit>true</skipInit>
-							<skipDryRun>true</skipDryRun>
+                            <skipInit>true</skipInit>
+                            <skipLint>true</skipLint>
+                            <skipDryRun>true</skipDryRun>
+                            <skipUpload>false</skipUpload>
 							<settings>${settings}</settings>
 							<uploadRepoStable>
 								<name>helm-stable</name>
@@ -91,20 +94,16 @@
 							</execution>
 						</executions>
 					</plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-deploy-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
 				</plugins>
 			</build>
-
-			<distributionManagement>
-				<repository>
-					<uniqueVersion>true</uniqueVersion>
-					<id>axamit.webteam.staging</id>
-					<name>Webteam Dev Repository</name>
-					<url>https://axamit.jfrog.io/artifactory/webteam-java-dev-local</url>
-					<layout>default</layout>
-				</repository>
-			</distributionManagement>
 		</profile>
-
     </profiles>
 
     <build>
@@ -128,11 +127,6 @@
                     <skipDryRun>true</skipDryRun>
                     <skipUpload>true</skipUpload>
                     <settings>${settings}</settings>
-                    <uploadRepoStable>
-                        <name>helm-stable</name>
-                        <url>https://axamit.jfrog.io/artifactory/helm-stable</url>
-                        <type>ARTIFACTORY</type>
-                    </uploadRepoStable>
                 </configuration>
             </plugin>
 
