--- a/helm/demo-rest-service/templates/overlays/envronments/staging/env.yaml
+++ b/helm/demo-rest-service/templates/overlays/envronments/staging/env.yaml
@@ -10,4 +10,4 @@ spec:
         - name: {{ .Values.appName }}
           env:
             - name: env
-              value: test
+              value: staging
