--- a/helm/demo-rest-service/values.yaml
+++ b/helm/demo-rest-service/values.yaml
@@ -1,5 +1,2 @@
 appName: demo-rest-service
-namespace: axamit
-env: local
-liveness: false
-readiness: false
+namespace: default # TODO: test with axamit
