--- a/helm/demo-rest-service/templates/base/deployment.yaml
+++ b/helm/demo-rest-service/templates/base/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app: {{ .Values.appName }}
   name: {{ .Values.appName }}
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: {{ .Values.appName }}
@@ -53,5 +53,5 @@ spec:
       volumes:
         - name: secret-volume
           secret:
-            secretName: postgresql-secret
+            secretName: postgresql-secret # used to connect to postgres
 status: {}
