--- a/helm/demo-rest-service/Chart.yaml
+++ b/helm/demo-rest-service/Chart.yaml
@@ -20,7 +20,7 @@ version: 0.0.1
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-appVersion: 0.0.1
+appVersion: 0.0.1  # set by helm plugin
 keywords: [spring, springboot, kubernetes, kustomize, helm, skaffold]
 home: https://github.com/pete-by/demo-rest-service
 sources:
