--- a/main/pom.xml
+++ b/main/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>demo-rest-service-parent</artifactId>
         <groupId>com.axamit.springboot</groupId>
-        <version>${revision}+${sha1}</version>
+        <version>${revision}-${sha1}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -102,6 +102,7 @@
                 </executions>
             </plugin>
 
+            <!-- Used to generate git.properties containing project info -->
             <plugin>
                 <!-- See https://www.baeldung.com/spring-git-information -->
                 <groupId>pl.project13.maven</groupId>
@@ -113,19 +114,14 @@
                         <goals>
                             <goal>revision</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>validate-the-git-infos</id>
-                        <goals>
-                            <goal>validateRevision</goal>
-                        </goals>
+                        <phase>initialize</phase>
                     </execution>
                 </executions>
                 <configuration>
                     <!-- To not check to remote repos -->
                     <offline>true</offline>
                     <!-- When working with project with submodules, setting this flag makes sure, that plugin works only for parent repository -->
-                    <runOnlyOnce>true</runOnlyOnce>
+                    <runOnlyOnce>false</runOnlyOnce>
                     <!-- To allow using git props in pom.xml -->
                     <injectAllReactorProjects>true</injectAllReactorProjects>
                     <failOnNoGitDirectory>false</failOnNoGitDirectory>
@@ -152,6 +148,7 @@
             <version>42.2.18</version>
         </dependency>
 
+        <!-- Connection pool -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
