tagging change and pod template update

--- a/main/pom.xml
+++ b/main/pom.xml
@@ -81,6 +81,7 @@
                     <to>
                         <image>${image.path}</image>
                         <tags>
+                            <tag>${project.version}</tag>
                             <tag>${sha1}</tag>
                         </tags>
                         <auth>
