--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -16,10 +16,10 @@ spec:
       env:
         - name: CONTAINER_ENV_VAR
           value: jnlp
-      volumeMounts:
-        - mountPath: "/home/jenkins/.m2"
-          name: maven-repo-pv
-          readOnly: false
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 1000
+        runAsGroup: 1000
     - name: build-container
       image: docker.io/peteby/build-container:2.0.1
       tty: true
