image is updated with version tag to make reproducible deployments and force updates

--- a/helm/demo-rest-service/templates/base/deployment.yaml
+++ b/helm/demo-rest-service/templates/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: {{ .Values.appName }}
     spec:
       containers:
-      - image: peteby/{{ .Values.appName }}
+      - image: peteby/{{ .Values.appName }}:{{ $.Chart.AppVersion }}
         name: {{ .Values.appName }}
         env:
           - name: env
