app props to trigger new version

--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.url=jdbc:postgresql://demo-postgres-postgresql:5432/demo_rest_
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.data=INFO
-logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.JdbcTemplate=INFO
