--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,19 @@
 				</repository>
 			</distributionManagement>
 		</profile>
+
+		<!-- for Spring Dev Tools to work in Skaffold -->
+		<profile>
+			<id>sync</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-devtools</artifactId>
+					<!-- <optional>true</optional> not required -->
+				</dependency>
+			</dependencies>
+		</profile>
+
 	</profiles>
 
 	<build>
